rough fix for getCommonSuperClass problems